# ya-cpp-developer-course

./: .clang-format  CMakeLists.txt
preliminary_course/: CMakeLists.txt
preliminary_course/theme_1/: CMakeLists.txt
preliminary_course/theme_1/lesson_2/: exercise_1.cpp
preliminary_course/theme_1/lesson_3/: exercise_1.cpp
preliminary_course/theme_1/lesson_4/: CMakeLists.txt  exercise_1.cpp  exercise_2.cpp
preliminary_course/theme_1/lesson_5/: exercise_1.cpp
preliminary_course/theme_2/: CMakeLists.txt
preliminary_course/theme_2/lesson_1/: exercise_1.cpp  exercise_2.cpp  exercise_3.cpp
preliminary_course/theme_2/lesson_2/: exercise_1.cpp  exercise_2.cpp  exercise_3.cpp
preliminary_course/theme_2/lesson_4/: exercise_1.cpp
preliminary_course/theme_2/lesson_5/: exercise_1.cpp  exercise_2.cpp
preliminary_course/theme_2/lesson_7/: exercise_1.cpp
preliminary_course/theme_3/: CMakeLists.txt
preliminary_course/theme_3/lesson_1/: exercise_1.cpp  exercise_2.cpp
preliminary_course/theme_3/lesson_2/: exercise_1.cpp  exercise_2.cpp
preliminary_course/theme_3/lesson_4/: exercise_1.cpp  exercise_2.cpp
preliminary_course/theme_3/lesson_5/: exercise_1.cpp  exercise_2.cpp
preliminary_course/theme_3/lesson_6/: exercise_1.cpp  exercise_2.cpp
preliminary_course/theme_3/lesson_7/: exercise_1.cpp  exercise_2.cpp  exercise_3.cpp  exercise_4.cpp  exercise_5.cpp
